package tutorial;
option cc_generic_services = true;
message SearchRequest
{
    required string request=1;
}

message SearchResponse
{
    required string response=1;
}

service SearchService {
  rpc Search (SearchRequest) returns (SearchResponse);
}